Cleaned all the code
* Now i need to comment